# docker-stack-deploy

./: Cargo.toml  Dockerfile  Makefile  README.md  bootstrap.sh  compose.yml  docker-entrypoint.sh
.github/workflows/: build-image.yml
src/: deploy_file.rs  main.rs  secrets.rs
